--- a/frontend/typescript/.eslintrc
+++ b/frontend/typescript/.eslintrc
@@ -1,7 +1,11 @@
 {
-  "extends": "airbnb",
-  "parser": "babel-eslint",
+  "extends": "airbnb-typescript",
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
   "plugins": [
+    "@typescript-eslint",
     "class-property",
     "react-hooks",
     "require-jsdoc-except"
@@ -11,7 +15,9 @@
     "node": true
   },
   "rules": {
-    "class-property/class-property-semicolon": [ "error", "never" ],
+    "@typescript-eslint/semi": "off",
+    "camelcase": "off",
+    "class-property/class-property-semicolon": ["error", "never"],
     "guard-for-in": "off",
     "import/extensions": "off",
     "import/named": "off",
@@ -23,8 +29,6 @@
     "jsx-a11y/interactive-supports-focus": "off",
     "jsx-a11y/media-has-caption": "off",
     "jsx-a11y/no-noninteractive-element-to-interactive-role": "off",
-    "jsx-a11y/no-static-element-interactions": "off",
-    "jsx-a11y/tabindex-no-positive": "off",
     "linebreak-style": 0,
     "max-len": [1, 120, 4],
     "no-console": "error",
@@ -51,7 +55,7 @@
     "react/no-array-index-key": "off",
     "react/no-did-update-set-state": "off",
     "react/no-unknown-property": "off",
-    "react/no-unused-prop-types": "off",
+    "react/prop-types": "off",
     "react/state-in-constructor": "off",
     "react/static-property-placement": "off",
     "react-hooks/exhaustive-deps": "warn",
