--- a/frontend/typescript/.eslintrc
+++ b/frontend/typescript/.eslintrc
@@ -27,6 +27,7 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/control-has-associated-label": "off",
     "jsx-a11y/interactive-supports-focus": "off",
+    "jsx-a11y/label-has-associated-control": "off",
     "jsx-a11y/media-has-caption": "off",
     "jsx-a11y/no-noninteractive-element-to-interactive-role": "off",
     "linebreak-style": 0,
