--- a/frontend/typescript/.eslintrc
+++ b/frontend/typescript/.eslintrc
@@ -17,6 +17,7 @@
   "rules": {
     "@typescript-eslint/semi": "off",
     "camelcase": "off",
+    "capitalized-comments": ["error", "always"],
     "class-property/class-property-semicolon": ["error", "never"],
     "guard-for-in": "off",
     "import/extensions": "off",
@@ -82,6 +83,7 @@
           "shouldComponentUpdate"
         ]
       }
-    ]
+    ],
+    "spaced-comment": ["error", "always"]
   }
 }
