update. Добавлено правило для более корректной работы фронта в vscode

--- a/frontend/javascript/jsconfig.json
+++ b/frontend/javascript/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "baseUrl": "./src",
+    "jsx": "react",
     "paths": {
       "components/*": [
         "components/*"
